--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
+    "auth-mern": "file:..",
     "framer": "^2.4.1",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
